deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webservice1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webservice1
  template:
    metadata:
      labels:
        app: webservice1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: webservice1-html
---
apiVersion: v1
kind: Service
metadata:
  name: webservice1
spec:
  selector:
    app: webservice1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
