ingress.yaml
# Ingress for /subdomain1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-subdomain1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - deepanshu"
spec:
  ingressClassName: nginx
  rules:
  - host: a280e03be3acf49f3b5f6955a784d2cf-2e552d871ac17614.elb.ap-south-1.amazonaws.com
    http:
      paths:
      - path: /subdomain1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webservice1
            port:
              number: 80

---
# Ingress for /subdomain2
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-subdomain2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: a280e03be3acf49f3b5f6955a784d2cf-2e552d871ac17614.elb.ap-south-1.amazonaws.com
    http:
      paths:
      - path: /subdomain2(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: webservice1
            port:
              number: 80
